--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <h1>Welcome to Cy's Website</h1>
     <p>This is a place where I'll share some of my thoughts..</p>
 
+    <h2>December 10th</h2>
+    <p> Bang bang Niner gang! First blog post successful! </p>
+
 </body>
 </html>
